- rehuff - http://wiki.xiph.org/Rehuff
- tidy-html5 4.9.26-191-gb4efe74 - http://www.paehl.com/open_source/?HTML_Tidy_for_HTML5
- TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
- UPX 3.91 - http://upx.sourceforge.net
- ZLib 1.2.8 - http://www.zlib.net
- zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress


XXXXX - YYYYYYY
- Added ZIP SFX installer detection.


8.30 - 2016/04/30
- Added UPX to the EXE/DLL tool chain (guindos98, necros).
- Added INI setting bEXEEnableUPX=false to enable UPX EXE compression. For instance bEXEEnableUPX=true will enable UPX processing (guindos98, necros).
- Added INI setting LeanifyIterations=-1 to specify desired Leanify iterations independantly of the compression level. For instance LeanifyIterations=128 will instruct Leanify to always use 128 iterations (necros).
- Added stereo extensions: MPO (Multi Picture Object), PNS (PNG Stereo) and JPS (JPEG Stereo).
- Added LXF extension (Lego Digital Designer) to ZIP chain (Jaff).
- Tweaked ECT invoking to make it get better compression ratios (Jaff).
- Fixed ECT execution it does not use -Mx but -x instead (fhanau).
- Fixed disable ZIP recurse handling in Leanify (Jaff).
- Fixed an Embarcadero's VCL bug that caused view modes in add files Windows common dialog show strange strings (JoeW).
- Removed crop-transparency from gifsicle arguments, since it can downsize resulting GIF image, and thus not being lossless (Austin Donisan).
- Disable TruePNG on ICO files because it crashes (TPS).
- Avoid using Advzip on SFX ZIP files due to header being removed (Jaff).
- Updated AdvanceCOMP to 1.20 (Jaff). 
- Updated Leanify to 0.4.3.103 daily binaries.
- Updated pngquant to 2.5.2.
- Updated TruePNG to 0.6.2.2.
- Updated strip to 2.26.
- Updated Ghostcript to 9.19. Please report any issue if I should revert to 9.15.
- Updated OptiPNG to 0.7.6 since Hg 20121021 is discontinued.
- Updated ImageMagick to 6.9.3.8 with HDRI support.
- Updated to cppcheck 1.73.